# clips

./: CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env
.github/workflows/: ci.yml  codeql-analysis.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake  Utilities.cmake  VCEnvironment.cmake
configured_files/: CMakeLists.txt  config.hpp.in
include/: colisp.hpp  util.hpp
include/ast/: ast.hpp
include/cxlisp/: cxlisp.hpp  memory.hpp
include/cxlisp/ast/: ast.hpp
include/cxlisp/parser/: parser.hpp
include/cxlisp/util/: empty.hpp  string.hpp  type_traits.hpp  util.hpp  vector.hpp
include/cxlisp/vm/: vm.hpp
include/parser/: parser.hpp
include/util/: empty.hpp  string.hpp  vector.hpp
src/: CMakeLists.txt  main.cpp
src/cxlisp/: CMakeLists.txt  cxlisp.cpp
test/: CMakeLists.txt  cxlisp_constexpr_tests.cpp  cxlisp_runtime_tests.cpp
